test/compile_errors/err_while_let_binding_scope.w
//! expect-error: undefined variable

fn next_value() -> Option[i32]:
    None

fn main:
    while let Some(value) = next_value():
        let _inside = value
    let _outside = value
